--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,23 +1,32 @@
 .container {
+    width: 100%;
     display: grid;
-    grid-template: auto 1fr auto / auto 1fr auto;
+    gap: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
-    padding: 1rem;
+    width: auto;
     grid-column: 1 / 4;
-    font-weight: bold;
     background-color: #F2B6C1;
-    height: 50px;
     color: white;
+}
+
+.profile-pic    {
+    height: 150px;
+    width: auto;
+    padding: 1rem 1rem 0;
+}
+
+h1  {
+    display: inline-grid;
+    font-size: 1.5rem;
 }
 
 .navigation {
     display: flex;
-    flex-direction: row;
+    width: 100%;
     justify-content: space-evenly;
-    padding: 1rem;
     grid-column: 1 / 4;
     background-color: #F2AE30;
 }
@@ -26,19 +35,18 @@ header {
     text-decoration: none;
     color: white;
     font-weight: 600;
+    padding: 1rem;
 }
 
 .main-content {
     grid-column: 1 / 3;
     background-color: #89D9D9;
-    height: 300px;
     padding: 1rem;
 }
 
 .aside-right {
     grid-column: 3 / 4;
     background-color: #F2811D;
-    width: 200px;
     padding: 1rem;
 }
 
@@ -46,7 +54,7 @@ footer {
     grid-column: 1 / 4;
     background-color: #5A98BF;
     text-align: center;
-    height: 150px;
+    /* height: 150px; */
     padding: 1rem;
     color: white;
 }
