--- a/styles/base.css
+++ b/styles/base.css
@@ -6,8 +6,8 @@
     --accent1-color: #181B1A;
     --accent2-color: #FFFFFF;
 
-    --heading-font: 'roboto serif', sans-serif;
-    --paragraph-font: 'inter', sans-serif;
+    --heading-font: 'Roboto Serif', serif;
+    --paragraph-font: 'Inter', sans-serif;
 
     --nav-background-color: #D7DBD9;
     --nav-link-color: #181B1A;
@@ -27,7 +27,7 @@ header {
 
 h1 {
     font-family: var(--heading-font);
-    color: white;
+    color: var(--accent2-color);
     font-size: 1.5rem;
     text-align: center;
     padding: 1rem;
@@ -59,7 +59,8 @@ h1 {
 main {
     display: grid;
     grid-template: auto 1fr auto / 1fr auto;
-    width: auto;
+    max-width: 80%;
+    margin: 0 auto;
 }
 
 .card {
@@ -69,6 +70,7 @@ main {
     border-radius: 10px;
     margin: 15px;
     margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 h2 {
@@ -113,7 +115,7 @@ h3 {
 hr.solid {
     width: 75%;
     grid-column: 1 / 5;
-    color: (var(--accent1-color));
+    color: var(--accent1-color);
   }
 
 .colorado-info {
