--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #455A53;
-    --secondary-color: #90A69F;
+    --primary-color: #485752;
+    --secondary-color: #809990;
     --accent1-color: #181B1A;
     --accent2-color: #FFFFFF;
 
