--- a/styles/temples.css
+++ b/styles/temples.css
@@ -105,9 +105,13 @@ h2 {
     padding-top: 2rem;
 }
 
+/* .content-wrapper {
+    padding: 0;
+} */
+
 .image-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     place-items: center;
     padding-bottom: 2rem;
 }
