--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -20,6 +20,7 @@
 
     h1 {
         text-align: left;
+        padding: 0 0 0 1rem;
     }
 
     #menu {
@@ -29,22 +30,23 @@
     .navigation { 
         display: flex;
         flex-direction: row;
+        padding-right: 2rem;
     }
 
     .navigation li {
         display: flex;
         flex: 0 0 auto;
-        padding: 1rem;
     }
 
     .image-grid {
-        display: grid;
+        /* gap: 5px; */
+        /* display: grid; */
         grid-template-columns: 1fr 1fr 1fr;
     } 
 
     .image-grid img {
-        max-height: 300px;
-        height: 18.5vw;
+        /* max-height: 500x; */
+        height: 15vw;
     }
 
 }
