added main to html and added ::after pseudo-class

--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -83,7 +83,7 @@
         z-index: 1;
     }
 
-    .weather-icon::before {
+    .weather-icon::after {
         content: " ";
         position: absolute;
         top: 0.5rem;
