--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,6 +1,5 @@
 :root {
-    /* --primary-color: #0678BF; */
-    /* --primary-color: #044d68; */
+    --primary-color: #0050B9;
     --secondary-color: #07C7F2;
     --accent1-color: #181B1A;
     --accent2-color: #FFFFFF;
