worked on popup and changed css files

--- a/project/styles/about_us.css
+++ b/project/styles/about_us.css
@@ -2,7 +2,7 @@
     --primary-color: #000000;
     --secondary-color: #FFFFFF;
     --accent1-color: #F2A74B;
-    --accent2-color: #F2994B;
+    --accent2-color: #014029;
 
     --nav-hover-link-color: #BD571C;
 
@@ -21,7 +21,6 @@ header h1 {
     font-family: var(--heading-font);
     font-size: 1.25rem;
     padding: 0;
-    margin: 0;
 }
 
 #menu {
@@ -98,30 +97,11 @@ h1.show {
     display: none;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: var(--paragraph-font);
-}
 
 /* Hero section styling */
 .hero {
     margin-top: 20px;
 }
-
-/* .overlay {
-    position: relative;
-}
-
-.overlay::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.65);
-} */
 
 .hero img {
     position: relative;
@@ -141,13 +121,7 @@ body {
     transform: translate(-50%, -50%);
     font-family: var(--heading-font);
     color: white;
-    /* font-size: 2rem; */
-    /* margin-bottom: 1em; */
 }
-
-/* .light {
-    font-family: 'Ador Hairline Light', sans-serif;
-} */
 
 .hero p {
     margin: 1rem 2rem 1rem 2rem;
@@ -159,9 +133,8 @@ body {
 .review_form {
     margin: 0 auto;
     border: none;
-    width: 100%;
-    max-width: 410px;
-    background-color: rgba(242, 167, 75, .5);
+    background-color: rgba(1, 64, 41, .9);
+    color: white;
     border-radius: 3px;
     padding-top: 0;
     padding: .8rem .8rem .8rem .8rem;
@@ -181,6 +154,7 @@ legend {
 }
 
 label {
+    font-family: var(--paragraph-font);
     display: block;
     padding-top: 1rem;
     font-size: .9rem;
@@ -199,11 +173,10 @@ label {
 
 .review_form textarea {
     width: 100%;
-    max-width: 400px;
     height: 100px;
 }
 
-.review_form input[type="submit"] {
+#reviewButton {
     border: none;
     color: black;
     font-weight: 700;
@@ -213,10 +186,25 @@ label {
     border-radius: 3px;
     padding: .8rem;
     width: 100%;
-    max-width: 400px;
-    box-shadow: 1px 1px 4px #999;
+    box-shadow: 1px 1px 4px var(--accent2-color);
     appearance: none;
     margin-top: .5rem;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 30%;
+    left: 49.5%;
+    transform: translate(-50%, -50%);
+    background-color: var(--accent1-color);
+    /* color: white; */
+    text-align: center;
+    padding: 50px 15px 50px 15px;
+    border: 1px solid black;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-family: var(--paragraph-font);
+    font-size: 1rem;
 }
 
 /* contact section styling */
@@ -234,11 +222,12 @@ label {
 }
 
 .contact img {
-    width: 90px;
+    width: 50px;
 }
 
 .contact p {
-    font-size: .7rem;
+    font-family: var(--paragraph-font);
+    font-size: .8rem;
 }
 
 /* Footer Styling */
