--- a/project/styles/about_us_large.css
+++ b/project/styles/about_us_large.css
@@ -6,13 +6,6 @@
         margin: 10px 0 0 30px;
     }
 
-    header h1 {
-        font-family: var(--heading-font);
-        font-size: 1.5rem;
-        padding: 0;
-        margin: 0;
-    }
-
     #menu {
         display: none;
     }
@@ -29,7 +22,7 @@
         display: inline-block;
         text-decoration: none;
         color: #000000;
-        padding: 0 0 0 3rem;
+        padding: .5rem 0 0 3rem;
     }
 
     #home:hover, #experiences:hover, #about_us:hover {
@@ -89,16 +82,6 @@
         text-align: left;
     }
 
-    /* .light {
-        font-family: 'Ador Hairline Light', sans-serif;
-    } */
-    
-    /* contact_container styling */
-    .contact_container {
-        display: flex;
-        justify-content: center;
-    }
-
     .review_form {
         width: 100%;
         padding: 0;
@@ -119,8 +102,12 @@
         margin-left: 50px;
     }
 
-    .contact_us {
-        margin-right: 200px;
+    .contact img {
+        width: 80px;
+    }
+
+    .contact p {
+        font-size: 1rem;
     }
 
 }
