--- a/project/styles/experiences_large.css
+++ b/project/styles/experiences_large.css
@@ -1,160 +1,191 @@
 @media (min-width: 740px) {
     /* Header Styling */
     header {
-       display: flex;
-       justify-content: space-between;
-       margin: 10px 0 0 30px;
-   }
+        display: flex;
+        justify-content: space-between;
+        margin: 10px 0 0 30px;
+    }
 
-   header h1 {
-       font-family: 'Ador Hairline', sans-serif;
-       font-size: 1.5rem;
-       padding: 0;
-       margin: 0;
-   }
+    #menu {
+        display: none;
+    }
 
-   #menu {
-       display: none;
-   }
+    .navigation {
+        font-family: var(--paragraph-font);
+        display: flex;
+        flex-direction: row;
+        list-style-type: none;
+        margin: 10px 30px 0 0;
+    }
 
-   .navigation {
-       font-family: 'Inter', sans-serif;
-       display: flex;
-       flex-direction: row;
-       list-style-type: none;
-       margin: 10px 30px 0 0;
-   }
+    .navigation li {
+        display: inline-block;
+        text-decoration: none;
+        color: #000000;
+        padding: .5rem 0 0 3rem;
+    }
 
-   .navigation li {
-       display: inline-block;
-       text-decoration: none;
-       color: #000000;
-       padding: 0 0 0 3rem;
-   }
-
-   #home:hover, #experiences:hover, #about_us:hover {
-       font-weight: bold;
-       color: var(--nav-hover-link-color);
-       font-style: italic;
-   }
-
+    #home:hover, #experiences:hover, #about_us:hover {
+        font-weight: bold;
+        color: var(--nav-hover-link-color);
+        font-style: italic;
+    }
+    
    /* Image styling */
-   h2 {
-       font-family: 'Ador Hairline', sans-serif;
-       text-align: center;
-       margin-bottom: 3rem;
-   }
+    h2 {
+        font-family: 'Ador Hairline', sans-serif;
+        text-align: center;
+        margin-bottom: 3rem;
+    }
 
-   .container {
-       display: flex;
-       flex-direction: row;
-       align-items: flex-start;
-       gap: 5%;
-       justify-content: center;
-   }
+    .container {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 5%;
+        justify-content: center;
+    }
 
-   .main_image {
-       margin-bottom: 0;
-       /* text-align: center; */
-       /* width: 100%; */
-   }
+    .main_image {
+        margin-bottom: 0;
+    }
 
-   #largeImage {
-       max-width: 100%;
-   }
+    #largeImage {
+        max-width: 100%;
+    }
 
-   #largeDescription {
-       /* text-align: center; */
-       max-width: 550px;
-       /* margin-top: 0px; */
-       /* margin-left: auto; */
-       /* margin-right: auto; */
-       text-align: left;
-       /* border-left: 2px dotted black;
-       padding: .5rem 0 .5rem 1rem; */
-       margin: 0;
-       margin-top: 1rem;
-   }
+    #largeDescription {
+        max-width: 550px;
+        text-align: left;
+        margin: 0;
+        margin-top: 1rem;
+    }
 
-   .image_grid {
-       display: grid;
-       grid-template-columns: repeat(3, 1fr);
-       gap: 15px;
-       width: 100%;
-       max-width: 600px;
-   }
+    .image_grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 15px;
+        width: 100%;
+        max-width: 600px;
+    }
 
-   .grid_item {
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       cursor: pointer;
-   }
+    .grid_item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        cursor: pointer;
+    }
 
-   .grid_item img {
-       width: 100%;
-       height: 100px;
-       object-fit: cover;
-   }
+    .grid_item img {
+        width: 100%;
+        height: 100px;
+        object-fit: cover;
+    }
 
-   .grid_item p {
-       font-size: .75rem;
-   }
+    .grid_item p {
+        font-size: .75rem;
+    }
 
-   .grid_item:hover p {
-       font-weight: 600;
-   }
+    .grid_item:hover p {
+        font-weight: 600;
+    }
 
-   .grid_item:hover img {
-       opacity: 0.7; 
-   }
+    .grid_item:hover img {
+        opacity: 0.7; 
+    }
 
    /* Newsletter Styling */
-   .newsletter {
-    margin: 0 auto;
-    border: none;
-    width: 100%;
-    max-width: 600px;
-    background-color: white;
-    border-radius: 2px;
-    padding-top: 0;
-    padding: 0 .8rem .8rem .8rem;
-   }
+    .newsletter {
+        margin: 0 auto;
+        border: none;
+        width: 100%;
+        max-width: 600px;
+        background-color: white;
+        border-radius: 2px;
+        padding-top: 0;
+        padding: 0 .8rem .8rem .8rem;
+    }
 
-   #form_heading {
-    font-family: var(--heading-font);
-    padding: 1rem 1rem 0 1rem;
-    margin: 0;
-    text-align: center;
-    font-weight: 600;
-    font-size: 1.5rem;
-}
+    #form_heading {
+        font-family: var(--heading-font);
+        padding: 1rem 1rem 0 1rem;
+        margin: 0;
+        text-align: center;
+        font-weight: 600;
+        font-size: 1.5rem;
+    }
 
-.newsletter input[type="email"] {
-    background-color: #eee;
-    display: block;
-    border: solid 1px #999;
-    border-radius: 2px;
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    color: var(--nav-hover-link-color);
-    width: 100%;
-    max-width: 600px;
-}
+    .newsletter input[type="email"] {
+        background-color: #eee;
+        display: block;
+        border: solid 1px #999;
+        border-radius: 2px;
+        padding-top: .75rem;
+        padding-bottom: .75rem;
+        color: var(--nav-hover-link-color);
+        width: 100%;
+        max-width: 600px;
+    }
 
-.newsletter input[type="submit"] {
-    border: none;
-    color: black;
-    font-weight: 700;
-    font-size: 1rem;
-    background-color: lightgrey;
-    border: .2px solid black;
-    border-radius: 3px;
-    padding: .8rem;
-    width: 100%;
-    max-width: 600px;
-    box-shadow: 1px 1px 4px #999;
-    appearance: none;
-    margin-top: .5rem;
-}
+    .newsletter input[type="submit"] {
+        border: none;
+        color: black;
+        font-weight: 700;
+        font-size: 1rem;
+        background-color: lightgrey;
+        border-radius: 3px;
+        padding: .8rem;
+        width: 100%;
+        max-width: 600px;
+        box-shadow: 1px 1px 4px #999;
+        appearance: none;
+        margin-top: .5rem;
+    }
+
+    /* For newsletter.html */
+    .hooray_container h2 {
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: var(--heading-font);
+        color: white;
+        z-index: 2;
+        font-size: 5rem;
+    }
+    
+    .hooray_container h3 {
+        position: absolute;
+        top: 35%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: var(--paragraph-font);
+        color: white;
+        z-index: 2;
+        font-size: 2.5rem;
+    }
+    }
+
+@media (min-width: 1300px) {
+    .hooray_container h2 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: var(--heading-font);
+        color: white;
+        z-index: 2;
+        font-size: 5rem;
+    }
+    
+    .hooray_container h3 {
+        position: absolute;
+        top: 65%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: var(--paragraph-font);
+        color: white;
+        z-index: 2;
+        font-size: 2.5rem;
+    }
 }
