--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -2,7 +2,7 @@
     --primary-color: #000000;
     --secondary-color: #FFFFFF;
     --accent1-color: #F2A74B;
-    --accent2-color: #F2994B;
+    --accent2-color: #014029;
 
     --nav-hover-link-color: #BD571C;
 
@@ -16,6 +16,14 @@ body {
     overflow-x: hidden;
 }
 
+h2 {
+    font-family: var(--heading-font);
+    text-align: center;
+    margin: 60px 25px 0 25px;
+    font-size: 1.1rem;
+    font-weight: bolder;
+}
+
 /* Header Styling */
 header {
     display: flex;
@@ -27,7 +35,6 @@ header h1 {
     font-family: var(--heading-font);
     font-size: 1.25rem;
     padding: 0;
-    margin: 0;
 }
 
 #menu {
@@ -104,6 +111,7 @@ h1.show {
     display: none;
 }
 
+
 /* Hero Section Styling */
 .hero_section {
     display: flex;
@@ -131,14 +139,6 @@ h1.show {
     font-family: Ador Hairline ExtraLight;
 }
 
-/* h2 styling */
-h2 {
-    font-family: var(--heading-font);
-    text-align: center;
-    margin: 60px 25px 0 25px;
-    font-size: 1.1rem;
-    font-weight: bolder;
-}
 
 /* carousel styling */
 .carousel {
@@ -199,6 +199,7 @@ h2 {
     right: 4%;
 }
 
+
 /* Footer Styling */
 footer {
     background-color: var(--primary-color);
@@ -215,5 +216,3 @@ footer p {
     font-weight: lighter;
     font-size: .75rem;
 }
-
-/* Experiences page specific styling */
